# internal/app/api/note_v1/delete_note.go
@@ -4,13 +4,14 @@ import (
 	"context"
 
 	desc "github.com/almira-galeeva/note-service-api/pkg/note_v1"
+	"google.golang.org/protobuf/types/known/emptypb"
 )
 
-func (n *Note) DeleteNote(ctx context.Context, req *desc.DeleteNoteRequest) (*desc.Empty, error) {
+func (n *Note) DeleteNote(ctx context.Context, req *desc.DeleteNoteRequest) (*emptypb.Empty, error) {
 	err := n.noteService.DeleteNote(ctx, req.GetId())
 	if err != nil {
 		return nil, err
 	}
 
-	return &desc.Empty{}, nil
+	return &emptypb.Empty{}, nil
 }
